--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -12,9 +12,9 @@
 <div layout:fragment="employees">
     <div class="p-3">
         <div class="card">
-            <div class="card-header">Liste Employees</div>
+            <div class="card-header">Employees</div>
             <div class="card-body">
-                <form method="get" th:action="@{index}">
+                <form method="get" th:action="@{/user/index}">
                     <label>keyword:</label>
                     <input type="text" name="keyword" th:value=${keyword}>
                     <button type="submit" class="btn btn-info">
@@ -42,16 +42,16 @@
                         <td th:text="${p.identificationNumber}"></td>
                         <td th:text="${p.gender}"></td>
                         <td th:text="${p.phoneNumber}"></td>
-                        <td>
+                        <td th:if="${#authorization.expression('hasRole(''ADMIN'')')}" >
                             <a onclick="return confirm('Are you sure !!!')"
-                               th:href="@{delete(id=${p.id})}"
+                               th:href="@{/admin/delete(id=${p.id})}"
                                class="btn btn-danger">
                                 <i class=" bi bi-trash"></i>
                             </a>
                         </td>
-                        <td>
+                        <td th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
                             <a class="btn btn-success"
-                               th:href="@{/editEmployee(id=${p.id})}">
+                               th:href="@{/admin/editEmployee(id=${p.id})}">
                                 Edit
                                 <!--<i class=" bi bi-trash"></i>--></a>
                         </td>
