--- a/src/main/resources/templates/formEmployee.html
+++ b/src/main/resources/templates/formEmployee.html
@@ -15,7 +15,7 @@
                 <div class="card-header"> New Patient</div>
                 <div class="card-body">
                     <div class="p-3">
-                        <form th:action="@{/saveEmployee}" method="post">
+                        <form th:action="@{/admin/saveEmployee}" method="post">
                             <div class="mb-2">
                                 <label class="from-label" >Name </label>
                                 <input type="text" name="name" class="form-control" th:value="${employee.name}">
