--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page"  th:href="@{/index}">Home</a>
+                    <a class="nav-link active" aria-current="page"  th:href="@{/user/index}">Home</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -28,21 +28,25 @@
                         Employees
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" th:href="@{/formEmployee}">New</a></li>
-                        <li><a class="dropdown-item" th:href="@{/index}">List</a></li>
+                        <li th:if="${#authorization.expression('hasRole(''ADMIN'')')}"><a class="dropdown-item" th:href="@{/admin/formEmployee}">New</a></li>
+                        <li><a class="dropdown-item" th:href="@{/user/index}">List</a></li>
                     </ul>
                 </li>
-              <!--  <ul class="d-flex ms-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            User
+                <div class="ms-auto">
+                    <li class="d-flex nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                           th:text="${#authentication.name}">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" th:href="@{/formEmployee}">Profil</a></li>
-                            <li><a class="dropdown-item" th:href="@{/index}">Logout</a></li>
+                            <li><a class="dropdown-item" th:href="@{/profil}">Profil</a></li>
+                            <li>
+                                <form method="post" th:action="@{/logout}">
+                                    <button class="dropdown-item" type="submit">Logout</button>
+                                </form>
+                            </li>
                         </ul>
                     </li>
-                </ul>-->
+                </div>
             </ul>
 
         </div>
