--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -34,24 +34,24 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="p : ${employeeList}">
-                        <td th:text="${p.id}"></td>
-                        <td th:text="${p.name}"></td>
-                        <td th:text="${p.dateBirth}"></td>
-                        <td th:text="${p.emailAddress}"></td>
-                        <td th:text="${p.identificationNumber}"></td>
-                        <td th:text="${p.gender}"></td>
-                        <td th:text="${p.phoneNumber}"></td>
+                    <tr th:each="e : ${employeeList}">
+                        <td th:text="${e.id}"></td>
+                        <td th:text="${e.name}"></td>
+                        <td th:text="${e.dateBirth}"></td>
+                        <td th:text="${e.emailAddress}"></td>
+                        <td th:text="${e.identificationNumber}"></td>
+                        <td th:text="${e.gender}"></td>
+                        <td th:text="${e.phoneNumber}"></td>
                         <td th:if="${#authorization.expression('hasRole(''ADMIN'')')}" >
                             <a onclick="return confirm('Are you sure !!!')"
-                               th:href="@{/admin/delete(id=${p.id})}"
+                               th:href="@{/admin/delete(id=${e.id}, keyword=${keyword}, page=${currentPage})}"
                                class="btn btn-danger">
                                 <i class=" bi bi-trash"></i>
                             </a>
                         </td>
                         <td th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
                             <a class="btn btn-success"
-                               th:href="@{/admin/editEmployee(id=${p.id})}">
+                               th:href="@{/admin/editEmployee(id=${e.id})}">
                                 Edit
                                 <!--<i class=" bi bi-trash"></i>--></a>
                         </td>
@@ -60,7 +60,7 @@
                 </table>
                 <ul class="nav nav-pills ">
                     <li class="ms-1" th:each="value,status:${pages}">
-                        <a th:href="@{/index(page=${status.index},keyword=${keyword})}"
+                        <a th:href="@{/user/index(page=${status.index},keyword=${keyword})}"
                            th:class="${currentPage==status.index?'btn btn-info ':'btn btn-outline-info'}"
                            th:text="${1+status.index}">
                         </a>
